# Project-1

./: .gitignore  README.md
CtrlZStudios_AlexKidd_v0.5_DebugMode/: LICENSE
Images/: Alex Kidd Fighting Sprites.aseprite
Project1AlexKidd/: CMakeLists.txt  CMakePresets.json  Enemy.cpp  Enemy.h  GameManager.cpp  GameManager.h  MapManager.cpp  MapManager.h  MusicManager.cpp  MusicManager.h  PlayerManager.cpp  PlayerManager.h  SoundManager.cpp  SoundManager.h  main.cpp  vcpkg.json
Project1AlexKidd/Sprites/: Alex Kidd Fighting Sprites.aseprite
Scripts/: main.cpp
